--- a/package.json
+++ b/package.json
@@ -8,10 +8,10 @@
   "author": "Dilip",
   "license": "ISC",
   "description": "",
-  "dependencies": {
-    "cypress": "^14.0.3"
-  },
   "devDependencies": {
+    "@types/cypress": "^0.1.6",
+    "@types/mocha": "^10.0.10",
+    "cypress": "^14.1.0",
     "cypress-xpath": "^2.0.1"
   }
 }
